[project]
name = "multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.8",
    "openai>=2.32.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
    "zhipuai>=2.1.5.20250825",
]
